--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,5 +32,5 @@ jobs:
         echo Add other actions to build,
         echo test, and deploy your project.
     - name: GitHub CODEOWNERS Validator
-      uses: mszostok/codeowners-validator@v0.4.3
+      uses: mszostok/codeowners-validator@canary
 
