--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,6 +31,6 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
-    - name: GitHub CODEOWNERS Validator
+    - name: GitHub CODEOWNERS Validatord
       uses: mszostok/codeowners-validator@canary
 
